--- a/locales/zh_CN/LC_MESSAGES/user_guide/back-to-top.po
+++ b/locales/zh_CN/LC_MESSAGES/user_guide/back-to-top.po
@@ -22,7 +22,7 @@ msgstr ""
 
 #: ../../user_guide/back-to-top.md:1
 msgid "Back to Top button"
-msgstr ""
+msgstr "返回顶部按钮"
 
 #: ../../user_guide/back-to-top.md:3
 msgid ""
@@ -30,6 +30,7 @@ msgid ""
 "scroll down a page, and allows users to quickly return to the top of the "
 "page."
 msgstr ""
+"`返回顶部` 按钮是浮动按钮，当您向下滚动页面时会出现，它允许用户快速返回页面顶部。"
 
 #: ../../user_guide/back-to-top.md:5
 msgid ""
@@ -37,8 +38,9 @@ msgid ""
 "`html_theme_options[\"back_to_top_button\"]` configuration value in your "
 "`conf.py` file."
 msgstr ""
+"要控制 `返回顶部` 按钮的可见性，您可以在 `conf.py` 文件中使用 `html_theme_options[\"back_to_top_button\"]` 配置值。"
 
 #: ../../user_guide/back-to-top.md:13
 msgid "The default value for this configuration option is `True`."
-msgstr ""
+msgstr "此配置选项的默认值为 `True`。"
 
